News UAT/force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>Bookings related to Bookings in Cyber$ell (Genera), CyberAd, or Digital Booking Systems</description>
    <label>Booking</label>
    <nameField>
        <label>Booking #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>