News UAT/force-app/main/default/objects/Booking__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <formula>Sales_Order__r.External_Account__r.Account_No__c</formula>
    <label>Account #</label>
    <type>Text</type>
</CustomField>