News UAT/force-app/main/default/objects/Booking__c/fields/Ad_Proof_Document__c.field-meta.xml
<CustomField>
    <fullName>Ad_Proof_Document__c</fullName>
    <description>Id of the Document object for the latest Ad Proof</description>
    <label>Ad Proof Document</label>
    <length>18</length>
    <type>Text</type>
</CustomField>