News UAT/force-app/main/default/objects/Booking__c/fields/Ad_Proof_Link__c.field-meta.xml
<CustomField>
    <fullName>Ad_Proof_Link__c</fullName>
    <formula>IF( ISBLANK( Ad_Proof_Document__c ), &quot;&quot;, HYPERLINK( &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Ad_Proof_Document__c , &quot;View Proof&quot; ) )</formula>
    <label>Ad Proof Link</label>
    <type>Text</type>
</CustomField>