News UAT/force-app/main/default/objects/Booking__c/fields/Ad_Taker__c.field-meta.xml
<CustomField>
    <fullName>Ad_Taker__c</fullName>
    <label>Ad Taker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>