News UAT/force-app/main/default/objects/Booking__c/fields/AdjustmentTotal__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentTotal__c</fullName>
    <label>Adjustment Total</label>
    <summarizedField>Booking_Line_Item__c.AdjustmentTotal__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>