News UAT/force-app/main/default/objects/Booking__c/fields/AdProof_Required__c.field-meta.xml
<CustomField>
    <fullName>AdProof_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether AdProof is required.</description>
    <label>AdProof Required</label>
    <type>Checkbox</type>
</CustomField>