News UAT/force-app/main/default/objects/Booking__c/fields/Advertiser_Account__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advertiser Account</description>
    <label>Advertiser Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>