News UAT/force-app/main/default/objects/Booking__c/fields/Advertiser_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_Industry__c</fullName>
    <description>Used for segmentation in Marketo, Marketing Automation Platform for Campaigns</description>
    <formula>Advertiser_Account__r.Industry_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Account Industry</label>
    <type>Text</type>
</CustomField>