News UAT/force-app/main/default/objects/Booking__c/fields/Advertiser_Account_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_Postcode__c</fullName>
    <formula>Advertiser_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Account Postcode</label>
    <type>Text</type>
</CustomField>