News UAT/force-app/main/default/objects/Booking__c/fields/Advertiser_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Account_Record_Type__c</fullName>
    <formula>Advertiser_Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Account Record Type</label>
    <type>Text</type>
</CustomField>