News UAT/force-app/main/default/objects/Booking__c/fields/Advertister_Account_18__c.field-meta.xml
<CustomField>
    <fullName>Advertister_Account_18__c</fullName>
    <formula>CASESAFEID(Advertiser_Account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertister Account 18</label>
    <type>Text</type>
</CustomField>