News UAT/force-app/main/default/objects/Booking__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Agency</description>
    <label>Agency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>