News UAT/force-app/main/default/objects/Booking__c/fields/Amount_Owing__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owing__c</fullName>
    <description>Amount Owing</description>
    <label>Amount Owing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>