News UAT/force-app/main/default/objects/Booking__c/fields/Apex_Adproof_Previously_Sent__c.field-meta.xml
<CustomField>
    <fullName>Apex_Adproof_Previously_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be hidden from page layout. Used for SFE39 –  When creating a NEW booking confirmation - the Adproof checkbox should be ticked.</description>
    <label>Apex: Adproof Previously Sent</label>
    <type>Checkbox</type>
</CustomField>