News UAT/force-app/main/default/objects/Booking__c/fields/Apex_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Apex_Case_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>It is used for apex future call. Don&#39;t need to be displayed on page layout.</description>
    <label>Apex Case ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>