News UAT/force-app/main/default/objects/Booking__c/fields/Booked_Point__c.field-meta.xml
<CustomField>
    <fullName>Booked_Point__c</fullName>
    <description>Booked Point</description>
    <label>Booked Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>