News UAT/force-app/main/default/objects/Booking__c/fields/Booking_Completed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Completed__c</fullName>
    <formula>IF(ISBLANK(Last_Expiry_Appearance__c), &quot;&quot;, 
IF(Last_Expiry_Appearance__c &gt;= TODAY(), &quot;NO&quot; , &quot;YES&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Completed</label>
    <type>Text</type>
</CustomField>