News UAT/force-app/main/default/objects/Booking__c/fields/Booking_Contact__c.field-meta.xml
<CustomField>
    <fullName>Booking_Contact__c</fullName>
    <description>Booking System Contact</description>
    <label>Booking Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>