News UAT/force-app/main/default/objects/Booking__c/fields/Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Number__c</fullName>
    <description>Booking Number</description>
    <label>Old Booking #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>