News UAT/force-app/main/default/objects/Booking__c/fields/Booking_System_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_System_Account_Type__c</fullName>
    <description>Booking System Account Status</description>
    <formula>TEXT( External_Account__r.Account_Type__c )</formula>
    <label>Booking System Account Type</label>
    <type>Text</type>
</CustomField>