News UAT/force-app/main/default/objects/Booking__c/fields/Booking_Update_By__c.field-meta.xml
<CustomField>
    <fullName>Booking_Update_By__c</fullName>
    <description>Identifies the most recent user that made an update to the booking (could be an internal News Corp user or a self service user)</description>
    <inlineHelpText>Identifies the most recent user that made an update to the booking (could be an internal News Corp user or a self service user)</inlineHelpText>
    <label>Booking Update By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>