News UAT/force-app/main/default/objects/Booking__c/fields/Calc_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Calc_External_Id__c</fullName>
    <description>Calculated External Id, for use in integration</description>
    <formula>TEXT(Source_System__c) + &#39;_&#39; + External_Sales_Division__c + Name + &#39;_&#39; + TEXT(YEAR(DATEVALUE(Third_Party_Created__c))) + LPAD(TEXT(MONTH(DATEVALUE(Third_Party_Created__c))), 2,&#39;0&#39;) + LPAD(TEXT(DAY(DATEVALUE(Third_Party_Created__c))), 2,&#39;0&#39;)</formula>
    <label>Calc External Id</label>
    <type>Text</type>
</CustomField>