News UAT/force-app/main/default/objects/Booking__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>Caller</description>
    <label>Caller</label>
    <length>100</length>
    <type>Text</type>
</CustomField>