News UAT/force-app/main/default/objects/Booking__c/fields/Caller_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_Contact_Number__c</fullName>
    <description>Caller Contact Number</description>
    <label>Caller Contact Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>