News UAT/force-app/main/default/objects/Booking__c/fields/Campaign_fm__c.field-meta.xml
<CustomField>
    <fullName>Campaign_fm__c</fullName>
    <formula>Sales_Order__r.Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>