News UAT/force-app/main/default/objects/Booking__c/fields/Count_Booking_Outside_of_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Count_Booking_Outside_of_SFDC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not display on page. Used to count number of bookings created outside of Salesforce.com (ie. owned by Integration user)</inlineHelpText>
    <label>Count: Booking Outside of SFDC</label>
    <type>Checkbox</type>
</CustomField>