News UAT/force-app/main/default/objects/Booking__c/fields/Create_User__c.field-meta.xml
<CustomField>
    <fullName>Create_User__c</fullName>
    <description>Create User</description>
    <label>Create User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>