News UAT/force-app/main/default/objects/Booking__c/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <formula>TEXT(Sales_Order__r.External_Account__r.Credit_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>