News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Ad_Type__c</fullName>
    <label>Ad Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>