News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_AdType__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_AdType__c</fullName>
    <description>CyberAd Ad Type</description>
    <label>CyberAd AdType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>