News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Classification__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Classification__c</fullName>
    <label>Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>