News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Division__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Division__c</fullName>
    <label>Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>