News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Original_Booking__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Original_Booking__c</fullName>
    <label>CyberAd Original Booking</label>
    <length>100</length>
    <type>Text</type>
</CustomField>