News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Publication__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Publication__c</fullName>
    <description>CyberAd Publication</description>
    <label>CyberAd Publication</label>
    <length>50</length>
    <type>Text</type>
</CustomField>