News UAT/force-app/main/default/objects/Booking__c/fields/CyberAd_Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Publication_Code__c</fullName>
    <label>Publication Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>