News UAT/force-app/main/default/objects/Booking__c/fields/External_Account__c.field-meta.xml
<CustomField>
    <fullName>External_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Booking/Billing Account</description>
    <inlineHelpText>Select the External Booking or Billing Account related to this Booking</inlineHelpText>
    <label>Booking System Account</label>
    <referenceTo>External_Account__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>