News UAT/force-app/main/default/objects/Booking__c/fields/External_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Number__c</fullName>
    <formula>External_Account__r.Account_No__c</formula>
    <label>Booking System Account #</label>
    <type>Text</type>
</CustomField>