News UAT/force-app/main/default/objects/Booking__c/fields/External_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Booking_Number__c</fullName>
    <description>External Booking Number</description>
    <label>External Booking #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>