News UAT/force-app/main/default/objects/Booking__c/fields/External_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>External_Last_Modified_By__c</fullName>
    <description>External Last Modified By</description>
    <label>External Last Modified By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>