News UAT/force-app/main/default/objects/Booking__c/fields/External_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Division__c</fullName>
    <description>External System Sales Division</description>
    <label>External Sales Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>