News UAT/force-app/main/default/objects/Booking__c/fields/External_Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Order_Id__c</fullName>
    <label>External Sales Order Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>