News UAT/force-app/main/default/objects/Booking__c/fields/Fax_Content__c.field-meta.xml
<CustomField>
    <fullName>Fax_Content__c</fullName>
    <description>This field is used to store fax content</description>
    <label>Fax Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>