News UAT/force-app/main/default/objects/Booking__c/fields/First_Expiry_Appearance__c.field-meta.xml
<CustomField>
    <fullName>First_Expiry_Appearance__c</fullName>
    <description>Earliest run date across all the Booking Line items for this Booking</description>
    <inlineHelpText>Earliest run date across all the Booking Line items for this Booking</inlineHelpText>
    <label>First Expiry - Appearance</label>
    <summarizedField>Booking_Line_Item__c.Run_Date__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>