News UAT/force-app/main/default/objects/Booking__c/fields/For_Attn_Of__c.field-meta.xml
<CustomField>
    <fullName>For_Attn_Of__c</fullName>
    <description>For Attention Of</description>
    <label>For Attn Of</label>
    <length>30</length>
    <type>Text</type>
</CustomField>