News UAT/force-app/main/default/objects/Booking__c/fields/Gross_Price_Sum__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_Sum__c</fullName>
    <description>Gross Price (Sum)</description>
    <label>Gross Price (Sum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>