News UAT/force-app/main/default/objects/Booking__c/fields/GST_Inclusive_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>GST_Inclusive_Total_Cost__c</fullName>
    <label>GST Inclusive Total Cost</label>
    <summarizedField>Booking_Line_Item__c.Price_Incl_GST__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>