News UAT/force-app/main/default/objects/Booking__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold Status</description>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>