News UAT/force-app/main/default/objects/Booking__c/fields/Import_Label__c.field-meta.xml
<CustomField>
    <fullName>Import_Label__c</fullName>
    <description>Import Label</description>
    <label>Import Label</label>
    <type>TextArea</type>
</CustomField>