News UAT/force-app/main/default/objects/Booking__c/fields/Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Incomplete Status</description>
    <label>Incomplete</label>
    <type>Checkbox</type>
</CustomField>