News UAT/force-app/main/default/objects/Booking__c/fields/Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Date__c</fullName>
    <description>Integration Date/Time for when WebMethods have finished Booking updates.</description>
    <label>Integration Date</label>
    <type>DateTime</type>
</CustomField>