News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Appearance__c</fullName>
    <description>The max run date of line items</description>
    <inlineHelpText>The latest run date of Booking Line Items</inlineHelpText>
    <label>Last Expiry - Appearance</label>
    <summarizedField>Booking_Line_Item__c.Stop_On_Web_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>