News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Insertion_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Insertion_Number__c</fullName>
    <description>Last Expiry - Insertion Number</description>
    <label>Last Expiry - Insertion Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>