News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Insertion_Set__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Insertion_Set__c</fullName>
    <description>Last Expiry - Insertion Set</description>
    <label>Last Expiry - Insertion Set</label>
    <length>30</length>
    <type>Text</type>
</CustomField>