News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Public_Division__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Public_Division__c</fullName>
    <description>Last Expiry - Publication Division</description>
    <label>Last Expiry - Public Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>