News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Publication__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Publication__c</fullName>
    <description>Last Expiry - Publication</description>
    <label>Last Expiry - Publication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>