News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Section__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Section__c</fullName>
    <description>Last Expiry - Section</description>
    <label>Last Expiry - Section</label>
    <length>30</length>
    <type>Text</type>
</CustomField>