News UAT/force-app/main/default/objects/Booking__c/fields/Last_Expiry_Stop_on_Web_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Expiry_Stop_on_Web_Date__c</fullName>
    <description>Max Data on the Booking Line Item: &quot;Stop on Web Date&quot;</description>
    <label>Last Expiry - Stop on Web Date</label>
    <summarizedField>Booking_Line_Item__c.Stop_On_Web_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>