News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Ad_Types__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Ad_Types__c</fullName>
    <description>Unique Ad Types in the Booking Line Items</description>
    <inlineHelpText>Unique Ad Types in the Booking Line Items</inlineHelpText>
    <label>Line Item Ad Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>