News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Classifications__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Classifications__c</fullName>
    <description>Unique Classifications in the Booking Line Items</description>
    <inlineHelpText>Unique Classifications in the Booking Line Items</inlineHelpText>
    <label>Line Item Classifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>