News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Gross_Price__c</fullName>
    <description>Line Item Gross Price Rollup</description>
    <label>Line Item Cost GST Excl</label>
    <summarizedField>Booking_Line_Item__c.Gross_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Cancelled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>