News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Gross_Price_GST_Incl__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Gross_Price_GST_Incl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c) *  Line_Item_Gross_Price__c</formula>
    <label>Line Item Cost GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>