News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Gross_Price_YTD__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Gross_Price_YTD__c</fullName>
    <label>Line Item Gross Price YTD</label>
    <summarizedField>Booking_Line_Item__c.Gross_Price_YTD__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>