News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Publication_Divisions_mpl__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Publication_Divisions_mpl__c</fullName>
    <description>Unique Divisions in the Booking Line Items</description>
    <inlineHelpText>Unique Divisions in the Booking Line Items</inlineHelpText>
    <label>Line Item Publication Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>NMG</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
            <value>
                <fullName>NTN</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>