News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_Publications__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Publications__c</fullName>
    <description>Unique Publications in the Booking Line Items</description>
    <inlineHelpText>Unique Publications in the Booking Line Items</inlineHelpText>
    <label>Line Item Publications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>