News UAT/force-app/main/default/objects/Booking__c/fields/Line_Item_TC_Flags__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_TC_Flags__c</fullName>
    <description>Unique TC (Til Cancelled) flags in the Booking Line Items (True, False)</description>
    <inlineHelpText>Unique TC (Til Cancelled) flags in the Booking Line Items</inlineHelpText>
    <label>Line Item TC Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>