News UAT/force-app/main/default/objects/Booking__c/fields/Master_Booking__c.field-meta.xml
<CustomField>
    <fullName>Master_Booking__c</fullName>
    <description>Master Booking</description>
    <label>Master Booking</label>
    <length>30</length>
    <type>Text</type>
</CustomField>