News UAT/force-app/main/default/objects/Booking__c/fields/Modified_By_Copy__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Copy__c</fullName>
    <description>This field is used for sending fax function in booking quote/confirmation module. This field is hidden from users. It is only for administrator to identify who updates booking quote/confirmation and wants to send fax last time. When trigger sends fax, we use the value in this field to set fax confirmation recipient so updated user (not integrator) will receive fax confirmation later.</description>
    <label>Modified By Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>