News UAT/force-app/main/default/objects/Booking__c/fields/NewsAdds_Paid_Total__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Paid_Total__c</fullName>
    <description>Sum of the NewsAdds Paid amounts from Booking Lines associated with this Booking</description>
    <inlineHelpText>Sum of the NewsAdds Paid amounts from Booking Lines associated with this Booking</inlineHelpText>
    <label>NewsAdds Paid Total</label>
    <summarizedField>Booking_Line_Item__c.NewsAdds_Paid__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>