News UAT/force-app/main/default/objects/Booking__c/fields/NewsAdds_Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Payer_ID__c</fullName>
    <label>NewsAdds Payer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>