News UAT/force-app/main/default/objects/Booking__c/fields/NewsAdds_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Payment_Method__c</fullName>
    <label>NewsAdds Payment Method</label>
    <type>TextArea</type>
</CustomField>