News UAT/force-app/main/default/objects/Booking__c/fields/NewsAdds_Recurring_Status__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Recurring_Status__c</fullName>
    <label>NewsAdds Recurring Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>