News UAT/force-app/main/default/objects/Booking__c/fields/NewsAdds_Sourcecode2__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Sourcecode2__c</fullName>
    <label>NewsAdds Sourcecode</label>
    <type>TextArea</type>
</CustomField>