News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Appearance__c</fullName>
    <description>Next Expiry - Appearance Date</description>
    <label>Next Expiry - Appearance</label>
    <type>Date</type>
</CustomField>