News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Insertion_Number__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Insertion_Number__c</fullName>
    <description>Next Expiry - Insertion Number</description>
    <label>Next Expiry - Insertion Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>