News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Insertion_Set__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Insertion_Set__c</fullName>
    <description>Next Expiry - Insertion Set</description>
    <label>Next Expiry - Insertion Set</label>
    <length>30</length>
    <type>Text</type>
</CustomField>