News UAT/force-app/main/default/objects/Booking__c/fields/Next_Expiry_Public_Division__c.field-meta.xml
<CustomField>
    <fullName>Next_Expiry_Public_Division__c</fullName>
    <description>Next Expiry - Public Division</description>
    <label>Next Expiry - Public Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>